# english-corpus-comparison

./: .gitignore  README_correlation.md  analysis.ipynb  corpus_merging.ipynb  correlation_analysis.py  hash_cleaning_guide.md  merged_corpus.csv  merged_corpus.xlsx  preprocessing.ipynb  preprocessing_guide.md  pyproject.toml  sample.csv
src/notebooks/: L1-L2-Comp.ipynb  clean_hash_values.py  corpus_merging.ipynb  correlation_analysis_example.ipynb  customTokenizer.py  frequency_preprocessing_analysis.py  json_handler.py  neighborhood.py  preprocessing.ipynb  preprocessor.py
