[project]
name = "corpus-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contractions>=0.1.73",
    "ipykernel>=6.29.5",
    "levenshtein>=0.27.1",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]
